Big test update

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -30,3 +30,12 @@
 .ui-link {
 	text-decoration: none !important;
 }
+
+.ui-accordion-content{
+	padding:0px !important;
+}
+
+.rightMenu td{
+	 text-align: center;
+}
+ 
