--- a/src/main/webapp/templates/topMenu.xhtml
+++ b/src/main/webapp/templates/topMenu.xhtml
@@ -15,6 +15,7 @@
     
     <p:menubar>
         <p:menuitem  value="Коннекторы" icon="ui-icon-arrowthick-2-ne-sw" outcome="connectors"/>
+        <p:menuitem  value="База данных" icon="ui-icon-clipboard" outcome="dataBase"/>
      </p:menubar>
 </h:form>
 
